cmake_minimum_required(VERSION 3.17)
project(ProgramsCLion)

set(CMAKE_CXX_STANDARD 14)

add_executable(AreaCirculo AreaCirculo.cpp)
add_executable(Porcentaje1 Porcentaje1.cpp)
add_executable(AreaCirLib2 AreaCirLib2.cpp)
add_executable(CalcularEdad1 CalcularEdad1.cpp)
add_executable(CalcularEdad2 CalcularEdad2.cpp)
add_executable(GetName GetName.cpp)
add_executable(NumPulsaciones NumPulsaciones.cpp)
add_executable(NumPulsacionesFloat NumPulsacionesFloat.cpp)
add_executable(Porcentaje2 Porcentaje2.cpp)
add_executable(Promedio1 Promedio1.cpp)
add_executable(Promedio2 Promedio2.cpp)
add_executable(Suma2 Suma2.cpp)
add_executable(Suma2UsingCinCout Suma2UsingCinCout.cpp)
add_executable(ComparadorEdad ComparadorEdad.cpp)
add_executable(PromedioComp PromedioComp.cpp)
add_executable(Intento PulsasionesAerobico.cpp)
add_executable(CamisasDescuento CamisasDescuento.cpp)
add_executable(SalarioSemanal SalarioSemanal.cpp)
add_executable(TasaIntereses TasaIntereses.cpp)
add_executable(MenuOperaciones MenuOperaciones.cpp)
add_executable(CicloFor CicloFor.cpp)
add_executable(DoWhile DoWhile.cpp)
add_executable(SwitchMenu SwitchMenu.cpp)
add_executable(Restaurante Restaurante.cpp)
add_executable(SwitchString SwitchString.cpp)
add_executable(CajeroAutomatico CajeroAutomatico.cpp)
add_executable(NumerosPares NumerosPares.cpp)
add_executable(TablaMultiplicar TablaMultiplicar.cpp)
add_executable(Heladeria Heladeria.cpp)
add_executable(NumerosPositivos NumerosPositivos.cpp)
add_executable(NumeroMayor NumeroMayor.cpp)
add_executable(ArraysExample ArraysExample.cpp)
add_executable(MultidimensionalArrays MultidimensionalArrays.cpp)
add_executable(ArraysEjercicios ArraysEjercicios.cpp)
add_executable(ArrayMultiplicacion ArrayMultiplicacion.cpp)
add_executable(ArraySumaDecimal ArraySumaDecimal.cpp)
add_executable(ArrayChar ArrayChar.cpp)
add_executable(ArrayMayor ArrayMayor.cpp)
add_executable(ArrayParesImpares ArrayParesImpares.cpp)
add_executable(MultiArrayEjercicio MultiArrayEjercicio.cpp)
add_executable(MultidimArrayEjer1 MultidimArrayEjer1.cpp)
add_executable(MultidimArrayEjer2 MultidimArrayEjer2.cpp)

add_executable(SumaMatrices SumaMatrices.cpp)